--- a/rabbitmq/.openshift/templates/builds/template.yml
+++ b/rabbitmq/.openshift/templates/builds/template.yml
@@ -83,4 +83,4 @@ parameters:
 - description: Git source URL for application
   name: SOURCE_REPOSITORY_URL
   required: true
-  value: https://github.com/juliaaano/containers-quickstarts
+  value: https://github.com/Kiran01bm/containers-quickstarts.git
