add dynamic provisioning

--- a/rabbitmq/.openshift/templates/deployments/template.yml
+++ b/rabbitmq/.openshift/templates/deployments/template.yml
@@ -117,6 +117,16 @@ objects:
         schedulerName: default-scheduler
         securityContext: {}
         terminationGracePeriodSeconds: 10
+  volumeClaimTemplates:
+  - metadata:
+      name: storage
+      annotations:
+        volume.beta.kubernetes.io/storage-class: rabbitmq
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 20Gi
 parameters:
 - description: The name for the application.
   name: APPLICATION_NAME
