--- a/rabbitmq/.openshift/templates/deployments/template.yml
+++ b/rabbitmq/.openshift/templates/deployments/template.yml
@@ -114,16 +114,15 @@ objects:
         schedulerName: default-scheduler
         securityContext: {}
         terminationGracePeriodSeconds: 10
-  volumeClaimTemplates:
-  - metadata:
-      name: mnesia
-      annotations:
-        volume.beta.kubernetes.io/storage-class: rabbitmq
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 20Gi
+    volumeClaimTemplates:
+    - metadata:
+        name: mnesia
+      spec:
+        storageClassName: "rabbitmq"
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 20Gi
 parameters:
 - description: The name for the application.
   name: APPLICATION_NAME
@@ -133,3 +132,4 @@ parameters:
   name: RABBITMQ_VERSION
   required: true
   value: 3.6.15
+
