--- a/rabbitmq/Dockerfile
+++ b/rabbitmq/Dockerfile
@@ -19,14 +19,6 @@ RUN set -xe
 #RUN rpm -Uvh ./erlang-${ERLANG_VERSION}-1.el7.centos.x86_64.rpm
 #RUN rm *.rpm
 
-COPY erlang-20.3.8.14-1.el7.centos.x86_64.rpm erlang-20.3.8.14-1.el7.centos.x86_64.rpm
-RUN rpm -Uvh ./erlang-20.3.8.14-1.el7.centos.x86_64.rpm
-RUN rm *.rpm
-
-COPY rabbitmq-server-3.7.14-1.el7.noarch.rpm rabbitmq-server-3.7.14-1.el7.noarch.rpm
-RUN rpm -Uvh ./rabbitmq-server-3.7.14-1.el7.noarch.rpm
-RUN rm *.rpm
-
 COPY hostname-3.13-3.el7.x86_64.rpm hostname-3.13-3.el7.x86_64.rpm
 RUN rpm -Uvh ./hostname-3.13-3.el7.x86_64.rpm
 RUN rm *.rpm
@@ -39,11 +31,18 @@ COPY logrotate-3.8.6-17.el7.x86_64.rpm logrotate-3.8.6-17.el7.x86_64.rpm
 RUN rpm -Uvh ./logrotate-3.8.6-17.el7.x86_64.rpm
 RUN rm *.rpm
 
+COPY erlang-20.3.8.14-1.el7.centos.x86_64.rpm erlang-20.3.8.14-1.el7.centos.x86_64.rpm
+RUN rpm -Uvh ./erlang-20.3.8.14-1.el7.centos.x86_64.rpm
+RUN rm *.rpm
+
+COPY rabbitmq-server-3.7.14-1.el7.noarch.rpm rabbitmq-server-3.7.14-1.el7.noarch.rpm
+RUN rpm -Uvh ./rabbitmq-server-3.7.14-1.el7.noarch.rpm
+RUN rm *.rpm
 
 # RUN curl -Lo rabbitmq-server.tar.xz https://www.rabbitmq.com/releases/rabbitmq-server/v${RABBITMQ_VERSION}/rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz
 # RUN curl -Lo rabbitmq-server.tar.xz.asc https://www.rabbitmq.com/releases/rabbitmq-server/v${RABBITMQ_VERSION}/rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz.asc
-COPY rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz rabbitmq-server.tar.xz
-COPY rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz.asc rabbitmq-server.tar.xz.asc
+# COPY rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz rabbitmq-server.tar.xz
+# COPY rabbitmq-server-generic-unix-${RABBITMQ_VERSION}.tar.xz.asc rabbitmq-server.tar.xz.asc
 RUN curl -Lo autocluster.ez https://github.com/rabbitmq/rabbitmq-autocluster/releases/download/${RABBITMQ_AUTOCLUSTER_VERSION}/autocluster-${RABBITMQ_AUTOCLUSTER_VERSION}.ez
 RUN curl -Lo rabbitmq_aws.ez https://github.com/rabbitmq/rabbitmq-autocluster/releases/download/${RABBITMQ_AUTOCLUSTER_VERSION}/rabbitmq_aws-${RABBITMQ_AUTOCLUSTER_VERSION}.ez
 RUN mkdir -p "$RABBITMQ_HOME"
